--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description" : "SuiteCRM Soap and Rest Client",
 	"autoload" : {
 		"psr-0" : {
-			"ste80pa\\SuiteCRMClient" : "src"
+			"ste80pa\\SuiteCRMClient\\" : "src/"
 		}
 	},
 	"authors" : [{
