--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
 	],
 	"require" : {
 		"php" : ">=5.3.0",
-		"ext-openssl": "*",
-		"ext-soap": "*"
+		"ext-openssl" : "*",
+		"ext-soap" : "*"
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "~4.0|~5.0|~6.0"
 	}
 }
