--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,17 @@
 language: php
 
 # 5.3 is available on Precise only
-# 5.4
+# 
 php:
+  - '5.4'
   - '5.5'
   - '5.6'
   - '7.0'
   - '7.1'
+
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+
+script:
+  - vendor/bin/phpunit
