--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
 		"ext-soap" : "*"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~4.8|~5.0|~6.0"
+		"phpunit/phpunit" : "~4.8|~5.0|~6.0",
+		"php-coveralls/php-coveralls": "^1.0"
 	}
 }
